Package_Tools/include-C/efl/fertig/edje-1/inarbeit/fertig/Edje_Common.h


typedef enum
{
  EDJE_CURSOR_MAIN = 0, 
  EDJE_CURSOR_SELECTION_BEGIN, 
  EDJE_CURSOR_SELECTION_END, 
  EDJE_CURSOR_PREEDIT_START, 
  EDJE_CURSOR_PREEDIT_END, 
  EDJE_CURSOR_USER, 
  EDJE_CURSOR_USER_EXTRA 
} Edje_Cursor;
typedef enum
{
  EDJE_TEXT_AUTOCAPITAL_TYPE_NONE = 0, 
  EDJE_TEXT_AUTOCAPITAL_TYPE_WORD, 
  EDJE_TEXT_AUTOCAPITAL_TYPE_SENTENCE, 
  EDJE_TEXT_AUTOCAPITAL_TYPE_ALLCHARACTER 
} Edje_Text_Autocapital_Type;
typedef enum
{
  EDJE_INPUT_HINT_NONE = 0, 
  EDJE_INPUT_HINT_AUTO_COMPLETE = 1 , 
  EDJE_INPUT_HINT_SENSITIVE_DATA = 2  
} Edje_Input_Hints;
typedef enum
{
  EDJE_INPUT_PANEL_LANG_AUTOMATIC = 0, 
  EDJE_INPUT_PANEL_LANG_ALPHABET 
} Edje_Input_Panel_Lang;
typedef enum
{
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_DEFAULT = 0, 
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_DONE, 
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_GO, 
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_JOIN, 
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_LOGIN, 
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_NEXT, 
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_SEARCH, 
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_SEND, 
  EDJE_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN 
} Edje_Input_Panel_Return_Key_Type;
typedef enum
{
  EDJE_INPUT_PANEL_LAYOUT_NORMAL = 0, 
  EDJE_INPUT_PANEL_LAYOUT_NUMBER, 
  EDJE_INPUT_PANEL_LAYOUT_EMAIL, 
  EDJE_INPUT_PANEL_LAYOUT_URL, 
  EDJE_INPUT_PANEL_LAYOUT_PHONENUMBER, 
  EDJE_INPUT_PANEL_LAYOUT_IP, 
  EDJE_INPUT_PANEL_LAYOUT_MONTH, 
  EDJE_INPUT_PANEL_LAYOUT_NUMBERONLY, 
  EDJE_INPUT_PANEL_LAYOUT_INVALID, 
  EDJE_INPUT_PANEL_LAYOUT_HEX, 
  EDJE_INPUT_PANEL_LAYOUT_TERMINAL, 
  EDJE_INPUT_PANEL_LAYOUT_PASSWORD, 
  EDJE_INPUT_PANEL_LAYOUT_DATETIME, 
  EDJE_INPUT_PANEL_LAYOUT_EMOTICON, 
  EDJE_INPUT_PANEL_LAYOUT_VOICE 
} Edje_Input_Panel_Layout;
typedef struct _Edje_Version
{
   int major; 
   int minor; 
   int micro; 
   int revision; 
} Edje_Version;
extern Edje_Version *edje_version;
extern void         edje_message_signal_process             (void);
extern void *       edje_object_signal_callback_extra_data_get(void);
extern void *edje_object_signal_callback_seat_data_get(void);
typedef enum _Edje_Channel
{
   EDJE_CHANNEL_EFFECT = 0, 
   EDJE_CHANNEL_BACKGROUND = 1, 
   EDJE_CHANNEL_MUSIC = 2, 
   EDJE_CHANNEL_FOREGROUND = 3, 
   EDJE_CHANNEL_INTERFACE = 4, 
   EDJE_CHANNEL_INPUT = 5, 
   EDJE_CHANNEL_ALERT = 6, 
   EDJE_CHANNEL_ALL = 7 
} Edje_Channel;
extern void edje_audio_channel_mute_set(Edje_Channel channel, Eina_Bool mute);
extern Eina_Bool edje_audio_channel_mute_get(Edje_Channel channel);
extern int          edje_init                       (void);
extern int		edje_shutdown			(void);
extern void		edje_fontset_append_set		(const char *fonts);
extern char             *edje_mmap_data_get(const Eina_File *f, const char *key);
extern char        *edje_file_data_get              (const char *file, const char *key);
extern Eina_Bool               edje_module_load                (const char *module);
extern const Eina_List        *edje_available_modules_get      (void);
extern const char		*edje_fontset_append_get	(void);
extern void         edje_file_cache_set             (int count);
extern int          edje_file_cache_get             (void);
extern void         edje_file_cache_flush           (void);
extern void         edje_collection_cache_set       (int count);
extern int          edje_collection_cache_get       (void);
extern void         edje_collection_cache_flush     (void);
typedef enum
{
  EDJE_EXTERNAL_PARAM_TYPE_INT = 0, 
  EDJE_EXTERNAL_PARAM_TYPE_DOUBLE, 
  EDJE_EXTERNAL_PARAM_TYPE_STRING, 
  EDJE_EXTERNAL_PARAM_TYPE_BOOL, 
  EDJE_EXTERNAL_PARAM_TYPE_CHOICE, 
  EDJE_EXTERNAL_PARAM_TYPE_MAX 
} Edje_External_Param_Type;
typedef enum _Edje_External_Param_Flags
{
   EDJE_EXTERNAL_PARAM_FLAGS_NONE        = 0, 
   EDJE_EXTERNAL_PARAM_FLAGS_GET         = (1 << 0), 
   EDJE_EXTERNAL_PARAM_FLAGS_SET         = (1 << 1), 
   EDJE_EXTERNAL_PARAM_FLAGS_STATE       = (1 << 2), 
   EDJE_EXTERNAL_PARAM_FLAGS_CONSTRUCTOR = (1 << 3), 
   EDJE_EXTERNAL_PARAM_FLAGS_REGULAR     = (EDJE_EXTERNAL_PARAM_FLAGS_GET |
                                            EDJE_EXTERNAL_PARAM_FLAGS_SET |
                                            EDJE_EXTERNAL_PARAM_FLAGS_STATE) 
} Edje_External_Param_Flags;
typedef struct _Edje_External_Param
{
  const char *name; 
  Edje_External_Param_Type type; 
  int i; 
  double d; 
  const char *s; 
} Edje_External_Param;
extern const char *edje_external_param_type_str(Edje_External_Param_Type type) ;
#define EDJE_EXTERNAL_INT_UNSET INT_MAX
#define EDJE_EXTERNAL_DOUBLE_UNSET DBL_MAX
typedef struct _Edje_External_Param_Info Edje_External_Param_Info;
#define EDJE_EXTERNAL_TYPE_ABI_VERSION (3)
typedef struct _Edje_External_Type Edje_External_Type;
typedef struct _Edje_External_Type_Info Edje_External_Type_Info;
extern Eina_Bool    edje_external_type_register             (const char *type_name, const Edje_External_Type *type_info);
extern Eina_Bool    edje_external_type_unregister           (const char *type_name);
extern void         edje_external_type_array_register       (const Edje_External_Type_Info *array);
extern void         edje_external_type_array_unregister     (const Edje_External_Type_Info *array);
extern unsigned int edje_external_type_abi_version_get      (void) ;
extern Eina_Iterator                  *edje_external_iterator_get     (void);
extern Edje_External_Param            *edje_external_param_find       (const Eina_List *params, const char *key);
extern Eina_Bool                       edje_external_param_int_get    (const Eina_List *params, const char *key, int *ret);
extern Eina_Bool                       edje_external_param_double_get (const Eina_List *params, const char *key, double *ret);
extern Eina_Bool                       edje_external_param_string_get (const Eina_List *params, const char *key, const char **ret);
extern Eina_Bool                       edje_external_param_bool_get   (const Eina_List *params, const char *key, Eina_Bool *ret);
extern Eina_Bool                       edje_external_param_choice_get (const Eina_List *params, const char *key, const char **ret);
extern const Edje_External_Param_Info *edje_external_param_info_get   (const char *type_name);
extern const Edje_External_Type       *edje_external_type_get         (const char *type_name);
typedef enum _Edje_Aspect_Control
{
   EDJE_ASPECT_CONTROL_NONE = 0,       
   EDJE_ASPECT_CONTROL_NEITHER = 1,    
   EDJE_ASPECT_CONTROL_HORIZONTAL = 2, 
   EDJE_ASPECT_CONTROL_VERTICAL = 3,   
   EDJE_ASPECT_CONTROL_BOTH = 4        
} Edje_Aspect_Control;
extern const char *edje_object_part_object_name_get(const Evas_Object *obj);
extern void         edje_scale_set                  (double scale);
extern double       edje_scale_get                  (void);
typedef enum _Edje_Text_Filter_Type
{
   EDJE_TEXT_FILTER_TEXT = 0,   
   EDJE_TEXT_FILTER_FORMAT = 1, 
   EDJE_TEXT_FILTER_MARKUP = 2  
} Edje_Text_Filter_Type;
enum xxxx
{
   EDJE_INPUT_PANEL_LAYOUT_NORMAL_VARIATION_NORMAL,         
   EDJE_INPUT_PANEL_LAYOUT_NORMAL_VARIATION_FILENAME,       
   EDJE_INPUT_PANEL_LAYOUT_NORMAL_VARIATION_PERSON_NAME     
};
enum xxx
{
   EDJE_INPUT_PANEL_LAYOUT_NUMBERONLY_VARIATION_NORMAL,             
   EDJE_INPUT_PANEL_LAYOUT_NUMBERONLY_VARIATION_SIGNED,             
   EDJE_INPUT_PANEL_LAYOUT_NUMBERONLY_VARIATION_DECIMAL,            
   EDJE_INPUT_PANEL_LAYOUT_NUMBERONLY_VARIATION_SIGNED_AND_DECIMAL  
};
enum xxxxxx
{
   EDJE_INPUT_PANEL_LAYOUT_PASSWORD_VARIATION_NORMAL,       
   EDJE_INPUT_PANEL_LAYOUT_PASSWORD_VARIATION_NUMBERONLY    
};